Added lyrics and image

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,10 +4,25 @@
 
 <head>
 <title>My First Webpage</title>
-
 </head>
 
 <body>
+  <h1>Jordan Patterson</h1>
+  <h2> Susanne </h2>
+  <h3> Rivers Cuomo </h3>
+
+  <hr />
+
+  <pre>
+Even Izzy, Slash and Axl Rose
+When I call you put them all on hold
+And say to me that you'd do anything
+And all I can do is say that
+I haven't much I can give you in return
+Only my heart and a promise not to turn
+But I'll sing to you every day and every night
+Susanne, I'm your man</pre>
+
 </body>
 
 </html>
