Attempt to fix image

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -24,5 +24,5 @@ But I'll sing to you every day and every night
 Susanne, I'm your man</pre>
 
 </body>
-[image of my atom editor](./images/Weezer_-_Blue_Album.png)
+<img src="Weezer_-_Blue_Album.png" />
 </html>
