--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -44,7 +44,7 @@
         <h3>Recipe Information:</h3>
           <ul>
             <!-- A3: Step 7 -->
-            <li>Prep Time: 25 mins</li>
+            <li><b>Prep Time: 25 mins</b></li>
             <li>Total Time: 3 hours</li>
             <li>Servings: 8</li>
           </ul>
