--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -93,6 +93,8 @@
             <dd><dfn id="dfn-garnish">Garnishes</dfn> are edible items added to food dishes that provide added flavor and appealing appearances for the items being served.</dd>
             <dt>Mandoline</dt>
             <dd>A <dfn id="dfn-mandoline">mandoline</dfn> is a hand-operated appliance used for cutting and slicing fruits and vegetables.</dd>
+            <dt>Puree</dt>
+            <dd>To <dfn id="dfn-puree">puree</dfn> is to blend, grind or mash food until it is a thick, smooth, lump-free consistency.</dd>
           </dl>
 
 
