--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -95,6 +95,9 @@
             <dd>A <dfn id="dfn-mandoline">mandoline</dfn> is a hand-operated appliance used for cutting and slicing fruits and vegetables.</dd>
             <dt>Puree</dt>
             <dd>To <dfn id="dfn-puree">puree</dfn> is to blend, grind or mash food until it is a thick, smooth, lump-free consistency.</dd>
+            <dt>Whisk</dt>
+            <dd>The process of using a <dfn id="dfn-whisk">whisk</dfn> to blend ingredients together or to incorporate air into ingredients to increase their volume.</dd>
+            
           </dl>
 
 
