Assigned references to tips and tools

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -55,7 +55,7 @@
 
         <h3>Tips and Tools:</h3>
         <!-- A3: Step 12 -->
-        <p>This cake requires several hours of preparation, not including what's required for the glaze or <a href="#dfn-garnish">garnish</a> (if utilized). You will need common kitchen utensils like a whisk, but may also require more specialized equipment like a mandoline and food processor to create the beet puree.</p>
+        <p>This cake requires several hours of preparation, not including what's required for the glaze or <a href="#dfn-garnish">garnish</a> (if utilized). You will need common kitchen utensils like a <a href="#dfn-whisk">whisk</a>, but may also require more specialized equipment like a <a href="#dfn-mandoline">mandoline</a> and food processor to create the beet <a href="#dfn-puree">puree</a>.</p>
 
 
         <hr />
@@ -97,7 +97,7 @@
             <dd>To <dfn id="dfn-puree">puree</dfn> is to blend, grind or mash food until it is a thick, smooth, lump-free consistency.</dd>
             <dt>Whisk</dt>
             <dd>The process of using a <dfn id="dfn-whisk">whisk</dfn> to blend ingredients together or to incorporate air into ingredients to increase their volume.</dd>
-            
+
           </dl>
 
 
