Add first subscript

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -86,7 +86,7 @@
         <hr />
 
 
-        <h2>Cooking Terms: <a href="#footnotes4">4</a></h2>
+        <h2>Cooking Terms: <sub><a href="#footnotes4">4</a></sub></h2>
           <dl>
             <!-- A3: Steps 10 and 11 -->
             <dt>Garnish</dt>
@@ -111,7 +111,7 @@
           <li>Preheat oven to 350 degrees. Whisk together flour, sugar, cocoa powder, baking soda, and 3/4 teaspoon salt in a large bowl. Whisk in eggs, water, oil, vanilla, and 1 1/4 cups beet puree (reserve remaining puree for another use).</li>
           <li>Coat a 9-inch round cake pan (3 inches deep) with cooking spray. Line bottom with parchment, and coat with spray. Pour batter into pan. Bake until a toothpick inserted into the center comes out clean, about 45 minutes. Let cool in pan on a wire rack for 20 minutes. Turn out cake from pan, and discard parchment. Let cool completely, right side up.</li>
           <li>Trim top of cake using a serrated knife to create a level surface. Transfer cake, cut side down, to a platter. Pour chocolate glaze over the top, and let set, about 30 minutes. Garnish with beet chips.</li>
-          
+
         <hr />
       </main>
 
