--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -13,7 +13,7 @@
         <!-- A3: Step 3 -->
         <img src="beetcake.jpeg" alt="Chocolate beet cake, ready to serve." style="width: 250px; float: right; margin: 20px">
 
-        <h1 style="color:DarkOrange">Chocolate Beet Cake Recipe <a href="#footnotes1">1</a></h1>
+        <h1 style="color:DarkOrange">Chocolate Beet Cake Recipe <sup><a href="#footnotes1">1</a></sup></h1>
 
         <!-- A3: Step 4 -->
         <p style="font-size:large">
@@ -39,7 +39,7 @@
         </blockquote>
 
         <!-- A3: Step 6 -->
-        <p>I haven't tried this recipe yet, but I'm <strong>really</strong> looking forward to trying! I'll attempt it <s>next week</s> when I have time. <a href="mailto:justine.evans@umontana.edu">Email-me</a> to see how it goes! <a href="#footnotes2">2</a></p>
+        <p>I haven't tried this recipe yet, but I'm <strong>really</strong> looking forward to trying! I'll attempt it <s>next week</s> when I have time. <a href="mailto:justine.evans@umontana.edu">Email-me</a> to see how it goes! <sup><a href="#footnotes2">2</a></sup></p>
 
         <h3>Recipe Information:</h3>
           <ul>
@@ -51,7 +51,7 @@
 
         <h3>Additional Recipes:</h3>
         <!-- A3: Step 8 -->
-        <p>There are two <del>required</del> <ins>recommended</ins> additional recipes needed to complete this cake, although you may try others. See the end of the <a href="#ingredients">ingredients list</a> below. Storage instructions provided in footnotes.<a href="#footnotes3">3</a>
+        <p>There are two <del>required</del> <ins>recommended</ins> additional recipes needed to complete this cake, although you may try others. See the end of the <a href="#ingredients">ingredients list</a> below. Storage instructions provided in footnotes.<sup><a href="#footnotes3">3</a></sup>
 
         <h3>Tips and Tools:</h3>
         <!-- A3: Step 12 -->
@@ -86,7 +86,7 @@
         <hr />
 
 
-        <h2>Cooking Terms: <sub><a href="#footnotes4">4</a></sub></h2>
+        <h2>Cooking Terms: <sup><a href="#footnotes4">4</a></sup></h2>
           <dl>
             <!-- A3: Steps 10 and 11 -->
             <dt>Garnish</dt>
