--- a/assignment3/pages/beetcake-glaze.html
+++ b/assignment3/pages/beetcake-glaze.html
@@ -18,7 +18,7 @@
 
       <h2>Getting Started:</h2>
 
-      <p>As someone explained to me, <>to create pretty, slow drips down the side of a cake, let the glaze cool slightly so it thickens a bit.<> It is a wonderful addition to this cake.</p>
+      <p><q>As someone explained to me, <>to create pretty, slow drips down the side of a cake, let the glaze cool slightly so it thickens a bit.<> It is a wonderful addition to this cake.</q></p>
 
       <h3>Recipe Information:</h3>
         <ul>
