--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -77,7 +77,7 @@
             <li>Ingredients found in Additional Recipes:</li>
             <!-- A3: Step 9 -->
               <ul>
-                <li><a href="beetcake-glaze.html/index.html" target="_blank">Chocolate Glaze for Cholocate Beet Cake</a></li>
+                <li><a href="beetcake-glaze/index.html" target="_blank">Chocolate Glaze for Cholocate Beet Cake</a></li>
                 <li><a href="beetcake-garnish.html/index.html" target="_blank">Candied Beet Chips for Chocolate Beet Cake</a>, as <a href="#dfn-garnish">garnish</a></li>
               </ul>
           </ul>
