--- a/assignment3/pages/beetcake-glaze.html
+++ b/assignment3/pages/beetcake-glaze.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-      <a href="index.html">Back to Home</a>
+      <a href="../#index.html">Back to Home</a>
     </footer>
   </body>
 </html>
