--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -25,7 +25,6 @@
           </address>
 
 
-          </>
         </p>
 
 
@@ -51,7 +50,7 @@
 
         <h3>Additional Recipes:</h3>
         <!-- A3: Step 8 -->
-        <p>There are two <del>required</del> <ins>recommended</ins> additional recipes needed to complete this cake, although you may try others. See the end of the <a href="#ingredients">ingredients list</a> below. Storage instructions provided in footnotes.<sup><a href="#footnotes3">3</a></sup>
+        <p>There are two <del>required</del> <ins>recommended</ins> additional recipes needed to complete this cake, although you may try others. See the end of the <a href="#ingredients">ingredients list</a> below. Storage instructions provided in footnotes.<sup><a href="#footnotes3">3</a></sup></p>
 
         <h3>Tips and Tools:</h3>
         <!-- A3: Step 12 -->
@@ -111,6 +110,7 @@
           <li>Preheat oven to 350 degrees. Whisk together flour, sugar, cocoa powder, baking soda, and 3/4 teaspoon salt in a large bowl. Whisk in eggs, water, oil, vanilla, and 1 1/4 cups beet puree (reserve remaining puree for another use).</li>
           <li>Coat a 9-inch round cake pan (3 inches deep) with cooking spray. Line bottom with parchment, and coat with spray. Pour batter into pan. Bake until a toothpick inserted into the center comes out clean, about 45 minutes. Let cool in pan on a wire rack for 20 minutes. Turn out cake from pan, and discard parchment. Let cool completely, right side up.</li>
           <li>Trim top of cake using a serrated knife to create a level surface. Transfer cake, cut side down, to a platter. Pour chocolate glaze over the top, and let set, about 30 minutes. Garnish with beet chips.</li>
+        </ol>
 
         <hr />
       </main>
@@ -124,7 +124,7 @@
 
           <li id="footnotes3"><span style="color:DarkOrange">Unglazed cake can be stored at room temperature (wrapped in plastic) for up to 2 days. Glazed cake can be stored at room temperature for up to 1 day.</span></li>
 
-          <li id="footnotes4">Cooking terms provided by <a href="http://www.recipetips.com/" target="_blank">http://www.recipetips.com/</a>
+          <li id="footnotes4">Cooking terms provided by <a href="http://www.recipetips.com/" target="_blank">http://www.recipetips.com/</a></li>
         </ol>
       </footer>
     </body>
