--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <p>
       <a href="./test/about.html">Test</a><br />
-      <a href="./Assignment3/index.html">Assignment 3</a><br />
-      <a href="">Assignment 4</a><br />
+      <a href="./assignment3/index.html">Assignment 3</a><br />
+      <a href="./assignment4/index.html">Assignment 4</a><br />
       <a href="">Assignment 5</a><br />
       <a href="">Assignment 6</a><br />
       <a href="">Assignment 7</a><br />
