Add email to form

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -35,12 +35,13 @@
         <legend>Contact Details</legend>
         <!-- Step 2 (Name) -->
         <p>Name:
-          <input type="text" name="name" id="name-first" />
-          <input type="text" name="name" id="name-middle" />
-          <input type="text" name="name" id="name-last" />
+          <input type="text" name="name" id="name-first" placeholder="First"/>
+          <input type="text" name="name" id="name-middle" placeholder="MI" maxlength="3" />
+          <input type="text" name="name" id="name-last" placeholder="Last" />
         </p>
         <!-- Step 3 (E-mail) -->
         <p>E-mail:
+          <input type="email" name="email" id="email" placeholder="you@email.com" autofocus />
 
         </p>
 
@@ -122,7 +123,7 @@
 
         </p>
 
-      </form> 
+      </form>
     </main>
     <!-- Step 20 -->
 
