--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -47,13 +47,15 @@
 
         <!-- Step 4 (Date) -->
         <p>Date of Birth:
-
+          <input type="date" name="date of birth" id="date of birth" placeholder="mm/dd/yyyy" />
         </p>
 
         <!-- Step 5 ("No" Radio) -->
         <p>Have you taken a web design course before?</p>
             <input id="yes" type="radio" name="prev-course" value="y">
               <label for="yes">Yes</label>
+            <input id="no" type="radio" name="prev-course" value="n">
+              <label for="no">No</label>
 
       </fieldset>
 
