--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -74,6 +74,13 @@
           <p>What is your preferred browser?</p>
           <p><i>Choose one:</i></p>
           <!-- Step 6 -->
+            <input type="radio" name="browser" value="Firefox" /> Firefox
+            <input type="radio" name="browser" value="Chrome" checked /> Chrome
+            <input type="radio" name="browser" value="Internet Explorer" /> Internet Explorer
+            <input type="radio" name="browser" value="Safari" /> Safari
+            <input type="radio" name="browser" value="Opera" /> Opera
+            <input type="radio" name="browser" value="Microsoft Edge" /> Microsoft Edge
+            <input type="radio" name="browser" value="Other" /> Other
 
         </div>
 
