--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -86,7 +86,10 @@
 
         <!-- LANGUAGES --><div id="languages">
           <!-- Step 7 -->
-
+          <figure>
+            <img src="./images/languages.png" alt="CSS image" title="CSS image" width="100" height="100" />
+            <figcaption>Chatting in Code</figcaption>
+          </figure>
           <p>What languages are you familiar with?</p>
           <p><i>Choose one or more:</i></p>
             <!-- Step 8 -->
