--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -99,6 +99,20 @@
           <p>What languages are you familiar with?</p>
           <p><i>Choose one or more:</i></p>
             <!-- Step 8 -->
+              <input type="checkbox" name="language" value="HTML" /> HTML
+              <br />
+              <input type="checkbox" name="language" value="CSS" /> CSS
+              <br />
+              <input type="checkbox" name="language" value="JavaScript" />JavaScript
+              <br />
+              <input type="checkbox" name="language" value="PHP" />PHP
+              <br />
+              <input type="checkbox"  name="language" value="Ruby" />Ruby
+              <br />
+              <input type="checkbox" name="language" value="Python" />Python
+              <br />
+              <input type="checkbox" name="language" value="Other" />Other
+              
 
         </div>
 
