--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -93,7 +93,7 @@
         <!-- LANGUAGES --><div id="languages">
           <!-- Step 7 -->
           <figure>
-            <img src="./images/languages.png" alt="CSS image" title="CSS image" width="100" height="100" />
+            <img src="./images/languages.png" alt="Image of the word CSS" title="CSS image" width="100" height="100" />
             <figcaption>Chatting in Code</figcaption>
           </figure>
           <p>What languages are you familiar with?</p>
@@ -112,12 +112,14 @@
               <input type="checkbox" name="language" value="Python" />Python
               <br />
               <input type="checkbox" name="language" value="Other" />Other
-              
+
 
         </div>
 
         <!-- SHORT-ANSWER--><div id="short-answer">
           <!-- Step 9 -->
+          <img src="./images/experience.png" alt="Image of a Wrench and Screwdriver" title="Experience image" width="100" height="100" />
+          <figcaption>In the Know?</figcaption>
 
           <p>Introduce yourself!</p>
 
