--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -118,8 +118,10 @@
 
         <!-- SHORT-ANSWER--><div id="short-answer">
           <!-- Step 9 -->
-          <img src="./images/experience.png" alt="Image of a Wrench and Screwdriver" title="Experience image" width="100" height="100" />
-          <figcaption>In the Know?</figcaption>
+          <figure>
+            <img src="./images/experience.png" alt="Image of a Wrench and Screwdriver" title="Experience image" width="100" height="100" />
+            <figcaption>In the Know?</figcaption>
+          </figure>
 
           <p>Introduce yourself!</p>
 
