Added  one experience level

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -127,6 +127,8 @@
 
           <p>“Hi! I'm a
             <select name="experience-level">
+              <option value="guppy">guppy</option>
+              
             <!-- Step 10 -->
 
             </select>
