--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -128,7 +128,11 @@
           <p>“Hi! I'm a
             <select name="experience-level">
               <option value="guppy">guppy</option>
-              
+              <option value="beginner">beginner</option>
+              <option value="novice" selected>novice</option>
+              <option value="journeyman">journeyman</option>
+              <option value="expert">expert</option>
+              <option value="wizard">wizard</option> 
             <!-- Step 10 -->
 
             </select>
