--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -132,7 +132,7 @@
               <option value="novice" selected>novice</option>
               <option value="journeyman">journeyman</option>
               <option value="expert">expert</option>
-              <option value="wizard">wizard</option> 
+              <option value="wizard">wizard</option>
             <!-- Step 10 -->
 
             </select>
@@ -140,12 +140,18 @@
 
           <p>“Last year, I spent
             <!-- Step 11 -->
-            <input type="text" name="experince-time"
+            <input type="number" name="experince-time"
             id="experince-time" placeholder="##" min="0" max="12" size="2"/>
             months studying or working in this field.”</p>
 
           <!-- Step 12 (textarea) -->
-          “I think my most difficult task will be...
+          <p>
+            <textarea name="comments" id="text area" cols="30" rows="2" >“I think my most difficult task will be..."
+            </textarea>
+          </p>
+
+            
+
         </div>
       </fieldset>
 
