Added Columns to Table

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -146,11 +146,9 @@
 
           <!-- Step 12 (textarea) -->
           <p>
-            <textarea name="comments" id="text area" cols="30" rows="2" >“I think my most difficult task will be..."
-            </textarea>
+            <textarea name="comments" id="text area" cols="30" rows="2">“I think my most difficult task will be..."</textarea>
           </p>
 
-            
 
         </div>
       </fieldset>
@@ -161,11 +159,20 @@
 
       <!-- Part 3: Course Offerings -->
       <!-- Steps 13-18 -->
+      <fieldset>
+        <legend>Course Offerings</legend>
 
 
         <!-- Step 19 -->
         <table>
-
+          <tr>
+            <th></th>
+            <th scope="col">Spring Semester</th>
+            <th scope="col">Summer Session</th>
+            <th scope="col">Autumn Semester</th>
+            <th scope="col">Winter Session</th>
+            <th scope="col">Special Session</th>
+          </tr> 
         </table>
         <p>Yes! Sign me up for weekly e-mail alerts.
 
