--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -172,7 +172,24 @@
             <th scope="col">Autumn Semester</th>
             <th scope="col">Winter Session</th>
             <th scope="col">Special Session</th>
-          </tr> 
+          </tr>
+          <tr>
+            <th scope="row">Times (PM)</th>
+              <td>M, W 12:00-2:00</td>
+              <td>F 5:30-9:30</td>
+              <td>M, W 12:00-2:00</td>
+              <td>F 12:00-2:00</td>
+              <td>TBA</td>
+          </tr>
+          <tr>
+            <th scope="row">Seats Available</th>
+              <td>12/60</td>
+              <td>FULL</td>
+              <td>FULL</td>
+              <td>2/60</td>
+              <td>0/60</td>
+          </tr>
+
         </table>
         <p>Yes! Sign me up for weekly e-mail alerts.
 
