--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -194,6 +194,12 @@
           </tr>
 
         </table>
+        <p>Username:
+          <input type="text" name="Username" id="username" required />
+        </p>
+        <p>Password:
+          <input type="password" name="password" id="password" required />
+        </p>
         <p>Yes! Sign me up for weekly e-mail alerts.
 
         </p>
