Added register button

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -201,9 +201,12 @@
           <input type="password" name="password" id="password" required />
         </p>
         <p>Yes! Sign me up for weekly e-mail alerts.
-
+          <input type="checkbox" name="sign-up" value="y" checked />
         </p>
-
+        <p>
+          <input type="image" src="./images/reg-button.png" alt="register button image" width="100" height="20" />
+        </p>
+      </fieldset> 
       </form>
     </main>
     <!-- Step 20 -->
