--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -206,10 +206,10 @@
         <p>
           <input type="image" src="./images/reg-button.png" alt="register button image" width="100" height="20" />
         </p>
-      </fieldset> 
+      </fieldset>
       </form>
     </main>
     <!-- Step 20 -->
-
+    <input type="image" src="./images/registration-station.jpg" alt="registration station image" title="Register Today!" width="500" height="333" />
   </body>
 </html>
