Added meta elements and style

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -1,7 +1,29 @@
 <!Doctype html>
 <html lang="en-US">
   <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Pork and Beans Song by Weezer">
+    <meta name="author" content="Weezer">
+    <meta name="keywords" content="Weezer, Rock, Pork and Beans, Web Design, HTML, WebDev, Web Development">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>Pork and Beans</title>
+    <style> body {
+      text-align: center;
+      }
+    .container {
+      width: 600px;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid black;
+    }
+    .lyrics p, pre {
+      font-family: arial;
+      font-size: small;
+    }
+    .contact {
+      background-color: powderblue;
+    }
+    </style> 
   </head>
   <body>
   </body>
