Added Style and Div

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Pork and Beans Song by Weezer">
+    <meta name="description" content="Pork and Beans">
     <meta name="author" content="Weezer">
     <meta name="keywords" content="Weezer, Rock, Pork and Beans, Web Design, HTML, WebDev, Web Development">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -23,8 +23,18 @@
     .contact {
       background-color: powderblue;
     }
-    </style> 
+    </style>
   </head>
   <body>
+    <div id="art" class="image">
+    </div>
+    <div id="audio" class="media">
+    </div>
+    <div id="video" class="media">
+    </div>
+    <div id="Lyrics" class="lyrics">
+    </div>
+    <div id="Copyright" class="Copyright">
+    </div>
   </body>
 </html>
