--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Pork and Beans">
-    <meta name="author" content="Weezer">
+    <meta name="author" content="Jordan Patterson">
     <meta name="keywords" content="Weezer, Rock, Pork and Beans, Web Design, HTML, WebDev, Web Development">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <title>Pork and Beans</title>
@@ -26,15 +26,17 @@
     </style>
   </head>
   <body>
-    <div id="art" class="image">
+    <div id="art" class="container">
+      <h1>Pork and Beans</h1>
+      <h2>Weezer</h2>
     </div>
-    <div id="audio" class="media">
+    <div id="audio" class="container">
     </div>
-    <div id="video" class="media">
+    <div id="video" class="container">
     </div>
-    <div id="Lyrics" class="lyrics">
+    <div id="Lyrics" class="container">
     </div>
-    <div id="Copyright" class="Copyright">
+    <div id="Copyright" class="container">
     </div>
   </body>
 </html>
