--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -29,7 +29,7 @@
     <div id="art" class="container">
       <h1>Pork and Beans</h1>
       <h2>Weezer</h2>
-      <img src="./images/redalbum.jpg" alt="Image of Weezer's Red Album Cover" title="Red Album" width="300" height="300">
+      <img src="./images/redalbum.jpg" alt="Image of Weezer's Red Album Cover" title="Red Album Images" width="300" height="300">
     </div>
     <div id="audio" class="container">
     </div>
@@ -39,5 +39,3 @@
     </div>
     <div id="Copyright" class="container">
     </div>
-  </body>
-</html>
