--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -29,10 +29,11 @@
     <div id="art" class="container">
       <h1>Thank God for Girls</h1>
       <h2>Weezer</h2>
-      <img src="./images/whitealbum.jpg" alt="Image of Weezer's White Album Cover" title="White Album Image" width="300" height="300">
+        <img src="./images/whitealbum.jpg" alt="Image of Weezer's White Album Cover" title="White Album Image" width="300" height="300">
     </div>
     <div id="audio" class="container">
       <h2>Listen here:</h2>
+        <iframe src="https://soundcloud.com/weezer/thank-god-for-girls" width="500px" height="300px"></iframe> s
     </div>
     <div id="video" class="container">
     </div>
