--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="audio" class="container">
       <h2>Listen here:</h2>
-        <iframe src="https://soundcloud.com/weezer/thank-god-for-girls" width="500px" height="300px"></iframe> s
+        <iframe width="400" height="200" src="https://soundcloud.com/weezer/thank-god-for-girls" frameborder="1" allowfullscreen></iframe>  
     </div>
     <div id="video" class="container">
     </div>
