--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -32,10 +32,12 @@
         <img src="./images/whitealbum.jpg" alt="Image of Weezer's White Album Cover" title="White Album Image" width="300" height="300">
     </div>
     <div id="audio" class="container">
-      <h2>Listen here:</h2>
-        <iframe width="400" height="200" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/229768307&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true" frameborder="1" allowfullscreen></iframe>  
+      <h2>Sit Back and Listen:</h2>
+        <iframe width="400" height="200" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/229768307&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true" frameborder="1" allowfullscreen></iframe>
     </div>
     <div id="video" class="container">
+      <h2>Watch the Music Video:</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/t4wjekuKn-4" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div id="Lyrics" class="container">
     </div>
