Add beginning copyright info

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -61,7 +61,7 @@
           Thank God for girls
           On your reckoning day
           You better bow down and pray
-          
+
           She’s so big
           She’s so strong
           She’s so energetic in her sweaty overalls
@@ -108,5 +108,8 @@
           “Thank God”
         </pre>
     </div>
-    <div id="Copyright" class="container">
+    <div id="Copyright" class="container contact">
+      <h3>Copyright</h3>
+        <p>
+          This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.&#169;</p>
     </div>
