Added copyright video element

--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -112,4 +112,5 @@
       <h3>Copyright</h3>
         <p>
           This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.&#169;</p>
+          <video src="./media/mart-logo-animated.mp4" poster="./media/mart-logo-animated.webm" width="400" height="320" preload controls></video>
     </div>
