--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -111,6 +111,11 @@
     <div id="Copyright" class="container contact">
       <h3>Copyright</h3>
         <p>
-          This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.&#169;</p>
-          <video src="./media/mart-logo-animated.mp4" poster="./media/mart-logo-animated.webm" width="400" height="320" preload controls></video>
+          This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.&#169;
+        </p>
+          <video poster="./mart-logo-poster.jpg" width="400" height="320" preload controls>
+            <source src="./mart-logo-animated.mp4" type="video/mp4" />
+            <source src="./mart-logo-animated.webm" type="video/webm" />
+          </video>
+
     </div>
