--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -118,4 +118,8 @@
             <source src="./media/mart-logo-animated.webm" type="video/webm" />
           </video>
 
-    </div>
+      </div>
+
+  </body>
+</html>
+ 
