--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -118,8 +118,16 @@
             <source src="./media/mart-logo-animated.webm" type="video/webm" />
           </video>
 
+          <address>
+            University of Montana
+            School of Media Arts, McGill Hall Room 224
+            32 Campus Drive
+            Missoula, MT 59812
+          </address>
+
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.048493383152!2d-113.98580903439522!3d46.862418079142365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33c3d4cbd5%3A0xd77cd4f46bdf5b89!2sMcGill+Hall%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1520902652726" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
       </div>
 
   </body>
 </html>
- 
