--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
 
     <p>
-      <a href="./project1/index.html">Project 1</a><br />
+      <a href="./Project1/index.html">Project 1</a><br />
       <a href="./project2/index.html">Project 2</a><br />
       <a href="./project3/index.html">Project 3</a>
     </p>
