--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
   <head>
-      <title>Potato Bites</title>
+      <title>Behind the Magic</title>
+      <meta charset="utf-8">
+      <meta name="description" content="About Us">
+      <meta name="author" content="Jordan Patterson">
+      <meta name="keywords" content="Appetizer, Rachel Ray, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
+      <meta name="viewport" content="width=device-width, intial-scale=1.0">
 
   </head>
   <body>
