--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
   <head>
-      <title>Potato Bites</title>
+      <title>Contact US</title>
       <meta charset="utf-8">
-      <meta name="description" content="Potato Bites Recipe">
+      <meta name="description" content="Contacts">
       <meta name="author" content="Jordan Patterson">
       <meta name="keywords" content="Appetizer, Rachel Ray, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
-
   </head>
   <body>
   </body>
