--- a/project2/index.html
+++ b/project2/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
       <title>Potato Bites</title>
-      <meta charset="utf-8">
-      <meta name="description" content="Potato Bites Recipe">
-      <meta name="author" content="Jordan Patterson">
-      <meta name="keywords" content="Appetizer, Rachel Ray, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
-      <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="description" content="Potato Bites Recipe">
+        <meta name="author" content="Jordan Patterson">
+        <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+      <style>
+        body {background-color: }
 
   </head>
   <body>
