--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="description" content="Contacts">
       <meta name="author" content="Jordan Patterson">
-      <meta name="keywords" content="Appetizer, Rachel Ray, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
+      <meta name="keywords" content="Contacts, Jordan Patterson, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
   </head>
   <body>
