--- a/project2/index.html
+++ b/project2/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: }
+        body {background-color: turquoise}
 
   </head>
   <body>
