--- a/project2/index.html
+++ b/project2/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
         body {background-color: turquoise}
+        h1 {color: gray}
 
   </head>
   <body>
