--- a/project2/index.html
+++ b/project2/index.html
@@ -8,11 +8,14 @@
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: turquoise}
-        h1 {color: gray}
+        body {background-color: turquoise; border: 10px solid gray}
+        
+      </style>
+
 
   </head>
   <body>
+
   </body>
 
 </html>
