--- a/project2/index.html
+++ b/project2/index.html
@@ -7,13 +7,15 @@
         <meta name="author" content="Jordan Patterson">
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
-  
+      <style>
+        body {background-color: turquoise; border: 10px solid gray}
+        h1 {color: lightgray; text-align: center}
+      </style>
 
   </head>
   <body>
-    <style>
-      body {background-color: turquoise; border: 10px solid gray}
-    </style>
+    <h1>Potato Bites</h1>
+
   </body>
 
 </html>
