--- a/project2/index.html
+++ b/project2/index.html
@@ -8,14 +8,17 @@
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: turquoise; border: 10px teal}
+        body {background-color: turquoise; border: 10px black}
         h1 {color: gray; text-align: center}
         h2 {color: darkgray; text-align: center}
+        h3 {color: darkgray; text-align: center}
       </style>
 
   </head>
   <body>
     <h1>Potato Bites</h1>
+    <h2>Page by: Jordan Patterson</h2>
+    <h3>Recipe from Rachel Ray</h3>
 
   </body>
 
