--- a/project2/index.html
+++ b/project2/index.html
@@ -8,10 +8,10 @@
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: turquoise; border: 10px black}
-        h1 {color: gray; text-align: center}
-        h2 {color: darkgray; text-align: center}
-        h3 {color: darkgray; text-align: center}
+        body {background-color: cornsilk}
+        h1 {color: firebrick; text-align: center}
+        h2 {color: gray; text-align: center}
+        h3 {color: gray; text-align: center}
       </style>
 
   </head>
