--- a/project2/index.html
+++ b/project2/index.html
@@ -20,6 +20,17 @@
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
 
+    <div id="ingredients">
+      <h3>Ingredients:</h3>
+    <ol>
+      <li>4 red potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
+      <li>1/3 cup extra-virgin olive oil</li>
+      <li>Salt</li>
+      <li>pound bacon</li>
+      <li>1/3 cup sour cream</li>
+      <li>1/3 cup cream cheese</li>
+      <li>1 tablespoon finely chopped chives</li>
+    </ol>
   </body>
 
 </html>
