--- a/project2/index.html
+++ b/project2/index.html
@@ -12,6 +12,7 @@
         h1 {color: firebrick; text-align: center}
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
+        h4 {color: firebrick; text-align: left}
       </style>
 
   </head>
@@ -21,8 +22,8 @@
     <h3>Recipe from Rachel Ray</h3>
 
     <div id="ingredients">
-      <h3>Ingredients:</h3>
     <ol>
+      <h4>Ingredients:</h4>
       <li>4 red potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
       <li>1/3 cup extra-virgin olive oil</li>
       <li>Salt</li>
