--- a/project2/index.html
+++ b/project2/index.html
@@ -20,7 +20,8 @@
     <h1>Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
-
+        <br>
+        <br>
     <div id="ingredients">
     <ul>
       <h4>Ingredients:</h4>
@@ -33,13 +34,21 @@
       <li>1 tablespoon finely chopped chives</li>
     </ul>
     </div>
-
+      <br>
+      <br>
     <div id="instructions">
     <ol>
       <h4>Instructions:</h4>
-      <li>Preheat the oven to 375 degrees . Place the potato rounds on a rimmed baking sheet. Toss with the olive oil, season with salt and arrange in a single layer. Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a paper-towel-lined plate to drain.</li>
-      <li>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium bowl, stir together the sour cream and cream cheese until smooth.</li>
-      <li>Arrange the potato slices on a platter in a single layer and top each round with a dollop of the sour cream mixture, some bacon bits and the chives. Serve warm</li>
+      <pre>
+      <li>Preheat the oven to 375 degrees . Place the potato rounds on a rimmed baking
+        sheet. Toss with the olive oil, season with salt and arrange in a single layer.
+        Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a
+        paper-towel-lined plate to drain.</li>
+      <li>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium
+        bowl, stir together the sour cream and cream cheese until smooth.</li>
+      <li>Arrange the potato slices on a platter in a single layer and top each round
+        with a dollop of the sour cream mixture, some bacon bits and the chives.
+        Serve warm</li>
     </ol>
     </div>
   </body>
