Added page links

--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -7,6 +7,15 @@
       <meta name="author" content="Jordan Patterson">
       <meta name="keywords" content="Contacts, Jordan Patterson, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
+      <style>
+        body {background-color: cornsilk}
+        h1 {color: firebrick; text-align: center}
+        h2 {color: gray; text-align: center}
+        h3 {color: gray; text-align: center}
+        h4 {color: firebrick; text-align: left}
+
+
+      </style>
   </head>
   <body>
   </body>
