--- a/project2/index.html
+++ b/project2/index.html
@@ -40,20 +40,23 @@
       <br>
     <div id="instructions">
     <ol>
-      <pre>
+      <p>
 <h4>Instructions:</h4>
-      <li>Preheat the oven to 375 degrees . Place the potato rounds on a rimmed baking
-sheet. Toss with the olive oil, season with salt and arrange in a single layer.
-Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a
+      <li>Preheat the oven to 375 degrees . Place the potato rounds on a rimmed baking<br>
+sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
+Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
 paper-towel-lined plate to drain.</li>
-      <li>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium
+      <li>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
 bowl, stir together the sour cream and cream cheese until smooth.</li>
-      <li>Arrange the potato slices on a platter in a single layer and top each round
-with a dollop of the sour cream mixture, some bacon bits and the chives.
+      <li>Arrange the potato slices on a platter in a single layer and top each round<br>
+with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
 Serve warm</li>
-      </pre>
+      </p>
     </ol>
     </div>
   </body>
+  <footer>
+      <a href="./pages/about.html">About Us</a>
+      <a href="./pages/contacts.html">Behind the Magic</a>
 
 </html>
