--- a/project2/index.html
+++ b/project2/index.html
@@ -27,13 +27,13 @@
     <div id="ingredients">
     <ul>
       <h4>Ingredients:</h4>
-      <li>4 red potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
+      <li>4 <b>red</b> potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
       <li>1/3 cup extra-virgin olive oil</li>
       <li>Salt</li>
       <li>pound bacon</li>
       <li>1/3 cup sour cream</li>
       <li>1/3 cup cream cheese</li>
-      <li>1 tablespoon finely chopped chives</li>
+      <li>1 <abbr title="Tablespoon">Tbsp</abbr> finely chopped chives</li>
     </ul>
     </div>
       <br>
@@ -42,7 +42,7 @@
     <ol>
       <p>
 <h4>Instructions:</h4>
-      <li>Preheat the oven to 375 degrees . Place the potato rounds on a rimmed baking<br>
+      <li>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
 sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
 Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
 paper-towel-lined plate to drain.</li>
