--- a/project2/index.html
+++ b/project2/index.html
@@ -13,15 +13,20 @@
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
-
+        table, td, th {
+          border: 2px solid gray;
+          border-collapse: collapse;
+          padding: 5px
 
       </style>
 
   </head>
   <body>
+    <div id="introduction">
     <h1>Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
+    </div.
         <br>
         <br>
     <div id="ingredients">
@@ -30,6 +35,7 @@
       <li>4 <b>red</b> potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
       <li>1/3 cup extra-virgin olive oil</li>
       <li>Salt</li>
+      <li><s>pepper</s></li>
       <li>pound bacon</li>
       <li>1/3 cup sour cream</li>
       <li>1/3 cup cream cheese</li>
@@ -41,22 +47,37 @@
     <div id="instructions">
     <ol>
       <p>
-<h4>Instructions:</h4>
-      <li>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
-sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
-Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
-paper-towel-lined plate to drain.</li>
-      <li>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
-bowl, stir together the sour cream and cream cheese until smooth.</li>
-      <li>Arrange the potato slices on a platter in a single layer and top each round<br>
+<h1>Instructions:</h1>
+<table
+<tr>
+  <th></th>
+  <th scope="col"></th>
+  <th scope="col">Preperation</th>
+  <th scope="col">Autumn Semester</th>
+  <th scope="col">Winter Session</th>
+  <th scope="col">Special Session</th>
+</tr>
+<tr>
+  <th scope="row">Step 1</th>
+    <td>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
+    sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
+    Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
+    paper-towel-lined plate to drain.</td>
+  <th scope="row">Step 2</th>
+    <td>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
+    bowl, stir together the sour cream and cream cheese until smooth.</td>
+  <th scope="row">Step 2</th>
+    <td>Arrange the potato slices on a platter in a single layer and top each round<br>
 with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
-Serve warm</li>
-      </p>
-    </ol>
+Serve warm</td>
+</tr>
+
+
+
     </div>
   </body>
   <footer>
-      <a href="./pages/about.html">About Us</a>
+      <a href="./pages/about.html">About Us</a> <br>
       <a href="./pages/contacts.html">Behind the Magic</a>
 
 </html>
