--- a/project2/index.html
+++ b/project2/index.html
@@ -26,7 +26,7 @@
     <h1>Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
-    </div.
+    </div>
         <br>
         <br>
     <div id="ingredients">
@@ -58,6 +58,8 @@
     sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
     Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
     paper-towel-lined plate to drain.</td>
+    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="100" width="100" /></td>
+
   <th scope="row">Step 2</th>
     <td>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
     bowl, stir together the sour cream and cream cheese until smooth.</td>
@@ -74,5 +76,5 @@ Serve warm</td>
   <footer>
       <a href="./pages/about.html">About Us</a> <br>
       <a href="./pages/contacts.html">Behind the Magic</a>
-
+  </footer>
 </html>
