--- a/project2/index.html
+++ b/project2/index.html
@@ -16,7 +16,8 @@
         table, td, th {
           border: 2px solid gray;
           border-collapse: collapse;
-          padding: 5px
+          padding: 20px
+
 
       </style>
 
@@ -48,10 +49,9 @@
     <ol>
       <p>
 <h1>Instructions:</h1>
-<table
+<table style="width:50%"
 <tr>
-  <th></th>
-  <th scope="col"></th>
+  <th colspan="3"><h4>Instructions</h4></th>
 <tr>
   <th scope="row">Step 1</th>
     <td>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
@@ -59,7 +59,8 @@
     Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
     paper-towel-lined plate to drain.</td>
     <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="100" width="100" /></td>
-
+</tr>
+<tr>
   <th scope="row">Step 2</th>
     <td>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
     bowl, stir together the sour cream and cream cheese until smooth.</td>
