--- a/project2/index.html
+++ b/project2/index.html
@@ -16,7 +16,7 @@
         table, td, th {
           border: 2px solid gray;
           border-collapse: collapse;
-          padding: 20px
+          padding: 10px
 
 
       </style>
@@ -49,21 +49,24 @@
     <ol>
       <p>
 <h1>Instructions:</h1>
-<table style="width:50%"
+<table style="device-width"
 <tr>
-  <th colspan="3"><h4>Instructions</h4></th>
+  <th colspan="3"><h1>Instructions</h1></th>
 <tr>
   <th scope="row">Step 1</th>
     <td>Preheat the oven to 375<sup>o</sup> . Place the potato rounds on a rimmed baking<br>
     sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
     Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
     paper-towel-lined plate to drain.</td>
-    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="100" width="100" /></td>
+    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="200" width="200" /></td>
 </tr>
 <tr>
   <th scope="row">Step 2</th>
     <td>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
     bowl, stir together the sour cream and cream cheese until smooth.</td>
+    <td> <img src="./images/bacon.jpg" alt="Image of crispy bacon" height="200" width="200" /></td>
+
+
   <th scope="row">Step 2</th>
     <td>Arrange the potato slices on a platter in a single layer and top each round<br>
 with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
