--- a/project2/index.html
+++ b/project2/index.html
@@ -65,12 +65,14 @@
     <td>Meanwhile, cook the bacon until crisp; crumble and set aside. In a medium<br>
     bowl, stir together the sour cream and cream cheese until smooth.</td>
     <td> <img src="./images/bacon.jpg" alt="Image of crispy bacon" height="200" width="200" /></td>
-
-
-  <th scope="row">Step 2</th>
+</tr>
+<tr>
+  <th scope="row">Step 3</th>
     <td>Arrange the potato slices on a platter in a single layer and top each round<br>
-with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
-Serve warm</td>
+    with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
+    Serve warm</td>
+    <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
+
 </tr>
 
 
