--- a/project2/index.html
+++ b/project2/index.html
@@ -46,9 +46,7 @@
       <br>
       <br>
     <div id="instructions">
-    <ol>
-      <p>
-<h1>Instructions:</h1>
+
 <table style="device-width"
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
@@ -72,12 +70,9 @@
     with a dollop of the sour cream mixture, some bacon bits and the chives.<br>
     Serve warm</td>
     <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
-
 </tr>
-
-
-
-    </div>
+</table>
+  </div>
   </body>
   <footer>
       <a href="./pages/about.html">About Us</a> <br>
