--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -19,12 +19,9 @@
   </head>
   <body>
       <p>
-        This webpage was produced for the class Introduction to Web Design & Development with the University of Montana, School of Media Arts.&#169;
+        This webpage was produced for the class Introduction to Web Design & Development <br>
+with the University of Montana, School of Media Arts.&#169;
       </p>
-        <video poster="./images/mart-logo-poster.jpg" width="400" height="320" preload controls>
-          <source src="./media/mart-logo-animated.mp4" type="video/mp4" />
-          <source src="./media/mart-logo-animated.webm" type="video/webm" />
-        </video>
           <br/>
           <br/>
         <address>
