--- a/project2/index.html
+++ b/project2/index.html
@@ -17,7 +17,7 @@
           border: 2px solid gray;
           border-collapse: collapse;
           padding: 10px
-
+        img, figure, figcaption, table {text-align:center;margin:auto}
 
       </style>
 
