--- a/project2/index.html
+++ b/project2/index.html
@@ -17,7 +17,8 @@
           border: 2px solid gray;
           border-collapse: collapse;
           padding: 10px
-        
+          background-color: darkorange}
+
 
       </style>
 
@@ -47,7 +48,7 @@
       <br>
     <div id="instructions">
 
-<table style="device-width"
+<table style="width:100%">
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
 <tr>
