--- a/project2/index.html
+++ b/project2/index.html
@@ -16,8 +16,8 @@
         table, td, th {
           border: 2px solid gray;
           border-collapse: collapse;
-          padding: 10px
-          background-color: darkorange}
+          padding: 10px}
+
 
 
       </style>
@@ -48,7 +48,7 @@
       <br>
     <div id="instructions">
 
-<table style="width:100%">
+<table style="width:100%"; "background-color: darkorange">
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
 <tr>
