fiddling with table

--- a/project2/index.html
+++ b/project2/index.html
@@ -48,7 +48,7 @@
       <br>
     <div id="instructions">
 
-<table style="width:100%"; "background-color: darkorange">
+<table style="width:100%"; style="background-color: darkorange">
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
 <tr>
@@ -57,7 +57,7 @@
     sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
     Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
     paper-towel-lined plate to drain.</td>
-    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="200" width="200" /></td>
+    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="200" width="200" text-align="center"/></td>
 </tr>
 <tr>
   <th scope="row">Step 2</th>
