--- a/project2/index.html
+++ b/project2/index.html
@@ -15,8 +15,8 @@
         h4 {color: firebrick; text-align: left}
         table, td, th {
           font-family: sans-serif;
-          background-color: coral;
-          border: 2px solid gray;
+          background-color: lightsalmon;
+          border: 3px solid black;
           border-collapse: collapse;
           padding: 10px}
 
@@ -59,7 +59,7 @@
     sheet. Toss with the olive oil, season with salt and arrange in a single layer.<br>
     Bake for 25 minutes, flip and bake for another 10 minutes. Transfer to a<br>
     paper-towel-lined plate to drain.</td>
-    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="200" width="200" c="center"/></td>
+    <td> <img src="./images/potatoes.jpg" alt="Image of potato slices on a sheet pan" height="200" width="200" class="center"/></td>
 </tr>
 <tr>
   <th scope="row">Step 2</th>
