--- a/project2/index.html
+++ b/project2/index.html
@@ -50,7 +50,7 @@
       <br>
     <div id="instructions">
 
-<table style="width:99%"; style="background-color: darkorange">
+<table style="width:100%"; style="background-color: darkorange"; align="center">
 <tr>
   <th colspan="3"><h1>Instructions</h1></th>
 <tr>
