--- a/project2/index.html
+++ b/project2/index.html
@@ -77,7 +77,8 @@
 </table>
   </div>
   </body>
-  <footer>
+  <br>
+  <footer style text-align="center">
       <a href="./pages/about.html">About Us</a> <br>
       <a href="./pages/contacts.html">Behind the Magic</a>
   </footer>
