Add footer style

--- a/project2/index.html
+++ b/project2/index.html
@@ -19,6 +19,7 @@
           border: 3px solid black;
           border-collapse: collapse;
           padding: 10px}
+        footer{text-align: center; font-family: sans-serif;}
 
 
 
@@ -78,7 +79,7 @@
   </div>
   </body>
   <br>
-  <footer style text-align="center">
+  <footer>
       <a href="./pages/about.html">About Us</a> <br>
       <a href="./pages/contacts.html">Behind the Magic</a>
   </footer>
