center align all text

--- a/project2/index.html
+++ b/project2/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: cornsilk}
+        body {background-color: cornsilk; text-align: center}
         h1 {color: firebrick; text-align: center}
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
