--- a/project2/index.html
+++ b/project2/index.html
@@ -35,7 +35,7 @@
         <br>
         <br>
     <div id="ingredients">
-    <ul>
+    <ul style="text-align: center">
       <h4>Ingredients:</h4>
       <li>4 <b>red</b> potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
       <li>1/3 cup extra-virgin olive oil</li>
