--- a/project2/index.html
+++ b/project2/index.html
@@ -20,6 +20,7 @@
           border-collapse: collapse;
           padding: 10px}
         footer{text-align: center; font-family: sans-serif;}
+        ul{text-align: center}
 
 
 
@@ -35,7 +36,7 @@
         <br>
         <br>
     <div id="ingredients">
-    <ul style="text-align: center">
+    <ul>
       <h4>Ingredients:</h4>
       <li>4 <b>red</b> potatoes,<br> sliced into 1/4-inch-thick rounds and patted dry</li>
       <li>1/3 cup extra-virgin olive oil</li>
