--- a/project2/index.html
+++ b/project2/index.html
@@ -20,7 +20,7 @@
           border-collapse: collapse;
           padding: 10px}
         footer{text-align: center; font-family: sans-serif;}
-        ul{text-align: center}
+        ul{margin-left: auto; margin-right: auto;}
 
 
 
