--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -13,7 +13,7 @@
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
-        
+        footer{text-align: center; font-family: sans-serif;}
 
 
       </style>
@@ -37,5 +37,8 @@ with the University of Montana, School of Media Arts.&#169;
     </div>
 
   </body>
+  <footer>
+    <a href="../index.html">Home</a> <br>
+    <a href="./pages/about.html">About</a>
 
 </html>
