--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -13,11 +13,14 @@
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
-
+        footer{text-align: center; font-family: sans-serif;}
 
       </style>
   </head>
   <body>
   </body>
-
+  <footer>
+    <a href="../index.html">Home</a> <br>
+    <a href="./pages/contacts.html">Behind the Magic</a>
+  </footer>
 </html>
