fixing broken links

--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -21,6 +21,6 @@
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
-    <a href="/contacts.html">Behind the Magic</a>
+    <a href="./contacts.html">Behind the Magic</a>
   </footer>
 </html>
