--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -38,8 +38,9 @@ with the University of Montana, School of Media Arts.&#169;
     </div>
 
   </body>
+  <br>
   <footer>
     <a href="../index.html">Home</a> <br>
-    <a href="./pages/about.html">About</a>
+    <a href="./about.html">About</a>
 
 </html>
