--- a/project2/index.html
+++ b/project2/index.html
@@ -13,13 +13,16 @@
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
+        ul{width: 70%; margin: auto}
         table, td, th {
           font-family: sans-serif;
           background-color: lightsalmon;
           border: 3px solid black;
           border-collapse: collapse;
           padding: 10px}
+        blockquote{text-align: center}
         footer{text-align: center; font-family: sans-serif;}
+
 
 
 
@@ -28,6 +31,8 @@
 
   </head>
   <body>
+    <br>
+    <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
     <div id="introduction">
     <h1>Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
