--- a/project2/index.html
+++ b/project2/index.html
@@ -13,7 +13,7 @@
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
         h4 {color: firebrick; text-align: left}
-        ul{width: 70%; margin: auto}
+        ul{width: 50%; margin: auto}
         table, td, th {
           font-family: sans-serif;
           background-color: lightsalmon;
@@ -32,11 +32,13 @@
   </head>
   <body>
     <br>
-    <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
     <div id="introduction">
     <h1>Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
+    </div>
+    <div>
+      <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
     </div>
         <br>
         <br>
