--- a/project2/index.html
+++ b/project2/index.html
@@ -12,7 +12,7 @@
         h1 {color: firebrick; text-align: center}
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
-        h4 {color: firebrick; text-align: left}
+        h4 {color: firebrick; text-align: center}
         ul{width: 25%; margin: auto}
         table, td, th {
           font-family: sans-serif;
