adding interpage link

--- a/project2/index.html
+++ b/project2/index.html
@@ -33,12 +33,9 @@
   <body>
     <br>
     <div id="introduction">
-    <h1>Potato Bites</h1>
+    <h1 id="top">Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
     <h3>Recipe from Rachel Ray</h3>
-    </div>
-    <div>
-      <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
     </div>
         <br>
     <div>
@@ -90,6 +87,10 @@
     <td> <img src="./images/potatopic2.jpg" alt="Image of Potato Bites" height="200" width="200" /></td>
 </tr>
 </table>
+  <a href="#ingredients"; text-align: center>Ingredients</a>
+  </div>
+  <div>
+    <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
   </div>
   </body>
   <br>
