--- a/project2/index.html
+++ b/project2/index.html
@@ -90,7 +90,7 @@
   <a href="#ingredients"; style="font-family: sans-serif"><center>Ingredients</center></a>
   </div>
   <div>
-
+    <p style="font-family: sans-serif; text-align: center"> <b>This is a great recipe to include little helpers, especially when it comes to assembling the potato bites.</b></p>
     <blockquote> <i>"You don't have to cook fancy or complicated masterpieces - just good food from fresh ingredients"</i> - Julia Child</blockquote>
   </div>
   </body>
