adding intro to about page

--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -18,6 +18,14 @@
       </style>
   </head>
   <body>
+    <h1>About Me</h1>
+    <p style="font-family: sans-serif; text-align: center">
+      <div id="Intro Paragraph" class="About Me">
+      My name is Jordan Patterson, I work full time, have three kids, a great husband, and am working on my degree in Anthropology.
+      I love cooking and entertaining but am usually short on time. When I cook I need it to be fast and there needs to be a way to incoporate my helpers, who are a constant in my kitchen.
+      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit.
+    </div>
+  </p>
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
