--- a/project2/index.html
+++ b/project2/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Potato Bites Recipe">
         <meta name="author" content="Jordan Patterson">
-        <meta name="keywords" content="Appetizer, Rachel Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
+        <meta name="keywords" content="Appetizer, Rachael Ray, Recipe, Steps, Bacon, Potato, Sour Cream, Chives, WebDev, Web Development">
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
         body {background-color: cornsilk}
@@ -35,7 +35,7 @@
     <div id="introduction">
     <h1 id="top">Potato Bites</h1>
     <h2>Page by: Jordan Patterson</h2>
-    <h3>Recipe from Rachel Ray</h3>
+    <h3>Recipe from Rachael Ray</h3>
     </div>
         <br>
     <div>
