--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -5,10 +5,10 @@
       <meta charset="utf-8">
       <meta name="description" content="About Us">
       <meta name="author" content="Jordan Patterson">
-      <meta name="keywords" content="Appetizer, About, Rachel Ray, WebDev, Web Development">
+      <meta name="keywords" content="Appetizer, About, Rachael Ray, WebDev, Web Development">
       <meta name="viewport" content="width=device-width, intial-scale=1.0">
       <style>
-        body {background-color: cornsilk}
+        body {background-color: cornsilk; text-align: center}
         h1 {color: firebrick; text-align: center}
         h2 {color: gray; text-align: center}
         h3 {color: gray; text-align: center}
@@ -21,9 +21,13 @@
     <h1>About Me</h1>
     <p style="font-family: sans-serif; text-align: center">
       <div id="Intro Paragraph" class="About Me">
-      My name is Jordan Patterson, I work full time, have three kids, a great husband, and am working on my degree in Anthropology.
+      <b>My name is Jordan Patterson, I work full time, have three kids, a great husband, and am working on my degree in Anthropology.
       I love cooking and entertaining but am usually short on time. When I cook I need it to be fast and there needs to be a way to incoporate my helpers, who are a constant in my kitchen.
-      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit.
+      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachel ray every day</cite>.
+      For more recipes click <iframe src="https://www.rachaelraymag.com/">here</iframe>.
+      <br>
+      Another constant in our house is music and dancing, we may not be very good at the latter but
+
     </div>
   </p>
   </body>
