adjusting link to magazine

--- a/project2/index.html
+++ b/project2/index.html
@@ -96,7 +96,7 @@
   </body>
   <br>
   <footer>
-      <a href="./pages/about.html">About Us</a> <br>
+      <a href="./pages/about.html">About Me</a> <br>
       <a href="./pages/contacts.html">Behind the Magic</a>
   </footer>
 </html>
