--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -23,8 +23,8 @@
       <div id="Intro Paragraph" class="About Me">
       <b>My name is Jordan Patterson, I work full time, have three kids, a great husband, and am working on my degree in Anthropology.
       I love cooking and entertaining but am usually short on time. When I cook I need it to be fast and there needs to be a way to incoporate my helpers, who are a constant in my kitchen.
-      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachel ray every day</cite>.
-      For more recipes click <iframe src="https://www.rachaelraymag.com/">here</iframe>.
+      This quick recipe has been a go-to recipe of mine for many years, I usually serve them every Thanksgiving and they are always a big hit. This recipe is from <cite>rachael ray every day</cite>.
+      For more recipes click <a href="https://www.rachaelraymag.com/">here</a>.
       <br>
       Another constant in our house is music and dancing, we may not be very good at the latter but
 
