--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -41,6 +41,6 @@ with the University of Montana, School of Media Arts.&#169;
   <br>
   <footer>
     <a href="../index.html">Home</a> <br>
-    <a href="./about.html">About</a>
+    <a href="./about.html">About Me</a>
 
 </html>
