Adding content to about page

--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -29,11 +29,32 @@
       more recipes click <a href="https://www.rachaelraymag.com/">here</a>.</b>
     </p>
       <br>
-      <br>
-      When cooking we love to listen to music. A favorite artist is weezer, if you would like
-
+    <p style="font-family: sans-serif; text-align: center">
+      <b>When cooking we love to listen to music. A favorite artist in our house is Weezer. If you need something to get you started while <br>
+      you cook here is a good place to start:</b>
+    </p>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241837348&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </div>
   </p>
+
+  <p style="font-family: sans-serif; text-align: center">
+    This webpage was produced for the class Introduction to Web Design & Development <br>
+with the University of Montana, School of Media Arts.&#169;
+  </p>
+      <br/>
+      <br/>
+  <div id="address">
+    <address>
+      University of Montana<br/>
+      School of Media Arts, McGill Hall Room 224<br/>
+      32 Campus Drive<br/>
+      Missoula, MT 59812<br/>
+    </address>
+  </div>
+      <br/>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.048493383152!2d-113.98580903439522!3d46.862418079142365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33c3d4cbd5%3A0xd77cd4f46bdf5b89!2sMcGill+Hall%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1520902652726" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+</div>
   </body>
   <footer>
     <a href="../index.html">Home</a> <br>
