--- a/project2/pages/contacts.html
+++ b/project2/pages/contacts.html
@@ -23,7 +23,7 @@
     <h1>Contact</h1>
     <form action="http://www.example.com/subscribe.php" method="get" id="subscribe-form" class="basic-forms">
 
-</form> action="/action_page.php">
+</form action="/action_page.php">
     First name:<br>
     <input type="text" name="firstname">
     <br>
