--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-      <form action="http://www.example.com/register.php" method="get">
+      <form action="http://www.example.com/register.php" method="get" "width:50%"; style="background-color: darkorange"; align="center"; border: 3px solidblack; padding: 10px> 
 
 
       <!-- Part 1: Basic Info -->
